--- a/passportauth/views/login.ejs
+++ b/passportauth/views/login.ejs
@@ -8,9 +8,10 @@
 </head>
 <body>
   <form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username">
+    <input type="text" name="email" placeholder="username">
     <input type="password" name="password" placeholder="password">
     <button>submit</button>
   </form>
+  <a href="/auth/github">login using github</a>
 </body>
 </html>
