add all changes in blogpost and express basics

--- a/blog-post/views/login.ejs
+++ b/blog-post/views/login.ejs
@@ -12,7 +12,7 @@
     <%- include partials/header.ejs %>  
     <div class="login">
       <form class="login__form" action="/login" method="POST">
-        <input type="text" name='username' placeholder="username">
+        <input type="text" name='email' placeholder="email">
         <input type="password" name="password" placeholder="password">
         <button>submit</button>
         <a href="/register">Not a member! Sign up</a>
